...
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
    <string name="prof_rc_firstLine">Example</string>
    <string name="expcat_rc_name">Example</string>
    <string name="expcat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="expcat_editform_info_edit">Edycja<br /> kategorii wydatków</string>
    <string name="expcat_editform_text_name">Nowa nazwa kategorii wydatków</string>
...
    <string name="schpay_editform_createTransaction">Utwórz transakcję</string>
    <string name="schpay_create_transaction_info_create">Tworzenie transakcji<br /> na podstawie<br /> zaplanowanej płatności</string>
    <string name="schpay_create_transaction_spin_cat_info">"Kategoria: "</string>
    <string name="schpay_create_transaction_spin_budget_info">Budżet:</string>
    <string name="schpay_create_transaction_confirmation_info">Czy na pewno<br /> chcesz utworzyć transakcję?</string>
    <string name="schpay_create_transaction_submit">Utwórz transakcję</string>
    <string name="ok">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="stat_description_info">Dla jakiego okresu chcesz uzyskać dane?</string>
    <string name="stat_overall_rb">dla całości</string>
    <string name="stat_budget_rb">dla określonego budżetu</string>
    <string name="stat_period_rb">dla określonego przedziału czasowego</string>
    <string name="stat_submit">Pokaż statystyki</string>
...
    <string name="shocont_editform_text_value">Wartość produktu</string>
    <string name="shocont_editform_text_unit">Jednostka produktu</string>
    <string name="shocont_editform_text_amount">Ilość/liczba produktów</string>
    <string name="shocont_deleteform_info_delete">Usuwanie produktu z listy</string>
    <string name="shocont_deleteform_submit">Usuń produkt</string>
    <string name="profile_createform_currency">Waluta (domyślnie: zł)</string>
    <string name="receipt_rc_name">Test name</string>
    <string name="receipt_rc_date">1900-01-01</string>
    <string name="receipt_rc_desc">description</string>
    <string name="receiptlist_empty_text">Jak widzisz, nie ma tutaj żadnego paragonu, dodaj go!</string>

    <string name="receipt_editAttributes_info_login">Edycja atrybutów paragonu</string>
    <string name="receipt_editAttributes_form_text_name">Nazwa paragonu</string>
    <string name="receipt_editAttributes_form_text_description">Dodatkowy opis, komentarz</string>
    <string name="receipt_editAttributes_form_submit">Edytuj atrybuty paragonu</string>

    <string name="receipt_edit_menu_info_login">Edycja paragonu</string>
    <string name="receipt_edit_menu_editAttributes">Edytuj atrybuty paragonu</string>
    <string name="receipt_edit_menu_editData">Edytuj zawartość paragonu</string>
    <string name="receipt_edit_menu_newImageFromFile">Nowe zdjęcie z pliku</string>
    <string name="receipt_edit_menu_newImageFromCamera">Nowe zdjęcie z aparatu</string>

    <string name="receipt_text_name">Test name</string>
    <string name="receipt_text_date">1900-01-01</string>
    <string name="receipt_button_edit">Edytuj paragon</string>
    <string name="receipt_button_delete">Usuń paragon</string>

    <string name="receipt_deleteform_submit">Usuń paragon</string>
    <string name="receipt_deleteform_info_delete">Usuwanie paragonu</string>
    <string name="receipt_deleteform_delete">Czy chcesz usunąć ten paragon?</string>

    <string name="receipt_create_info_login">Tworzenie paragonu</string>
    <string name="receipt_createform_text_name">Nazwa paragonu</string>
    <string name="receipt_createform_text_description">Dodatkowy opis, komentarz</string>
    <string name="receipt_createform_submit">Utwórz paragon</string>

    <string name="title_activity_receiptlist">Paragon</string>
    <string name="title_activity_phone_images_gallery">Wybierz obraz</string>
    <string name="title_activity_receiptimage">Zdjęcie paragonu</string>
    <string name="receipt_create_menu_info">Tworzenie paragonu</string>
    <string name="receipt_create_menu_newImageFromCamera">Nowe zdjęcie z aparatu</string>
    <string name="receipt_create_menu_newImageFromFile">Nowe zdjęcie z pliku</string>
    <string name="mainmenu_profile_info">Saldo dla profilu:</string>
    <string name="set_editBalance_info">Zresetuj saldo:</string>
    <string name="set_editBalance_button">Zresetuj saldo</string>
    <string name="set_edit_balance_info">Resetowanie salda</string>
    <string name="set_edit_balance_edit_balance">Saldo</string>
    <string name="set_edit_balance_submit">Resetuj saldo</string>
    <string name="receipt_edit_menu_recognizeDataFromReceipt">Odczytaj tekst z paragonu</string>
    <string name="receipt_editData_form_text_data">Treść paragonu</string>
    <string name="receipt_editAttributes_info">Edycja treści paragonu</string>
    <string name="receipt_editData_form_submit">Edytuj treść paragonu</string>
    <string name="profile_createprofile_name_error_existingName">Istnieje już profil z podaną nazwą.</string>
    <string name="profile_createprofile_pin_error_passwordMismatch">Podane kody PIN nie są identyczne.</string>
    <string name="profile_createprofile_pin_error_empty">Podaj kod PIN.</string>
    <string name="profile_createprofile_pin_error_insufficientChars">Kod PIN musi składać się z 6 cyfr.</string>
    <string name="profile_createprofile_name_error_empty">Podaj nazwę profilu.</string>
    <string name="profile_createprofile_currency_error_tooMuchChars">Waluta musi składać się maksymalnie z czterech liter.</string>
...
    <string name="expcat_createexpcat_name_error_syntax">Nazwa kategorii powinna składać się z co najmniej dwóch liter.</string>
    <string name="expcat_createexpcat_name_error_existing">Istnieje już kategoria z podaną nazwą.</string>
    <string name="schpay_createschpay_date_error_badDate">Płatność musi zostać zaplanowana w dniu późniejszym niż dziś.</string>
    <string name="schpay_createschpay_value_error_empty">Podaj wartość płatności.</string>
    <string name="income_createincome_value_error_empty">Podaj wartość przychodu.</string>
    <string name="expense_createexpense_value_error_empty">Podaj wartość wydatku.</string>
    <string name="receipt_createreceipt_name_error_empty">Podaj nazwę paragonu.</string>
    <string name="receipt_createreceipt_name_error_syntax">Nazwa paragonu powinna składać się z co najmniej dwóch liter.</string>
    <string name="sholist_createsholist_name_error_syntax">Nazwa listy powinna składać się z co najmniej dwóch liter.</string>
    <string name="sholist_createsholist_name_error_empty">Podaj nazwę listy zakupów.</string>
    <string name="shocont_createshocont_name_error_empty">Podaj nazwę produktu.</string>
    <string name="shocont_createshocont_name_error_syntax">Nazwa produktu powinna składać się z 2-25 znaków.</string>
    <string name="shocont_createshocont_name_error_existing">W liście znajduje się już produkt z podaną nazwą.</string>
    <string name="shocont_createshocont_amount_error_empty">Podaj ilość/liczbę produktów.</string>
...
