...
            android:drawablePadding="10dp"
            android:hint="@string/receipt_editAttributes_form_text_name"
            android:singleLine="true" >
        </EditText>

        <TextView
            android:id="@+id/receipt_editAttributes_form_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@+id/receipt_editAttributes_form_text_name"
            android:drawableStart="@drawable/baseline_today_24"
...
